refactor: enhance HTML structure, improve content presentation, and streamline accessibility features

--- a/portfolio.html
+++ b/portfolio.html
@@ -31,37 +31,36 @@
   <div class="cards-row fade-in">
     <div class="card" style="width:280px;">
       <h2>Background</h2>
-      <ul style="margin-left:20px;">
-        <li>B.Sc. in Computer Science / Electronics Engineering</li>
-        <li>10+ years in embedded software development</li>
-        <li>Expert in real-time systems &amp; OS internals</li>
-      </ul>
+      <!-- Icons or images instead of bullet points -->
+      <div style="display:flex; flex-direction:column; gap:8px;">
+        <div><img src="assets/icons/graduate-cap.svg" alt="Grad" style="width:20px; vertical-align:middle;"> B.Sc. in Computer Science / Electronics</div>
+        <div><img src="assets/icons/code.svg" alt="Code" style="width:20px; vertical-align:middle;"> 10+ years in embedded dev</div>
+        <div><img src="assets/icons/chip.svg" alt="Chip" style="width:20px; vertical-align:middle;"> Expert in real-time OS internals</div>
+      </div>
     </div>
     <div class="card" style="width:280px;">
       <h2>Focus Areas</h2>
-      <ul style="margin-left:20px;">
-        <li>Low-level C/C++ programming</li>
-        <li>Multithreading &amp; concurrency</li>
-        <li>Performance tuning &amp; memory optimization</li>
-      </ul>
+      <div style="display:flex; flex-direction:column; gap:8px;">
+        <div><img src="assets/icons/cpp.svg" alt="C++" style="width:20px;"> Low-level C/C++ programming</div>
+        <div><img src="assets/icons/multithread.svg" alt="Threads" style="width:20px;"> Multithreading & concurrency</div>
+        <div><img src="assets/icons/speedometer.svg" alt="Perf" style="width:20px;"> Performance & memory optimization</div>
+      </div>
     </div>
     <div class="card" style="width:280px;">
       <h2>Project Goals</h2>
-      <ul style="margin-left:20px;">
-        <li>Advanced modules for challenging C++ interviews</li>
-        <li>In-browser IDE with real-time solution checking</li>
-        <li>Showcase a professional portfolio &amp; technical background</li>
-      </ul>
+      <div style="display:flex; flex-direction:column; gap:8px;">
+        <div><img src="assets/icons/tasks.svg" alt="Modules" style="width:20px;"> Advanced modules for tough C++ interviews</div>
+        <div><img src="assets/icons/browser.svg" alt="Browser" style="width:20px;"> In-browser IDE with real-time checks</div>
+        <div><img src="assets/icons/portfolio.svg" alt="Portfolio" style="width:20px;"> Showcase a pro portfolio & background</div>
+      </div>
     </div>
   </div>
 
-  <!-- Resume Button -->
   <div class="resume-btn fade-in">
     <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
     <a href="resume.html" class="btn">View Resume</a>
   </div>
 
-  <!-- GitHub / LinkedIn icons with bigger glow on hover -->
   <div style="text-align:center; margin-top:30px;">
     <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
     <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
