--- a/progress.html
+++ b/progress.html
@@ -23,7 +23,7 @@
 <main class="page-content">
   <h1>Your Learning Journey</h1>
 
-  <!-- The radial progress indicator in a neon-glow card -->
+  <!-- Radial progress in a card -->
   <section class="card fade-in" style="text-align:center; max-width:500px; margin:0 auto;">
     <p style="margin-bottom: 20px;">
       Track your completed lessons. The radial ring below fills up as you
@@ -35,7 +35,7 @@
     <p id="progress-text" style="margin-top:10px;">Completed 0 / 21 Lessons</p>
   </section>
 
-  <!-- Additional stats row for interest -->
+  <!-- Additional stats row & progress bar -->
   <div class="progress-stats fade-in">
     <div class="stats-card card">
       <h3>Quizzes Completed</h3>
@@ -50,14 +50,30 @@
       <p id="achievements-count">Beginner</p>
     </div>
   </div>
+
+  <!-- Example animated progress bar container -->
+  <div class="progress-bar-container card fade-in" style="margin-top:30px;">
+    <h3 style="margin-bottom:10px;">Overall Completion</h3>
+    <div class="progress-bar-fill" id="progressBarFill"></div>
+  </div>
 </main>
 
 <footer>
   © 2025 Ohad’s WeCode. All rights reserved.
 </footer>
-
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 <script src="scripts/progress.js"></script>
+<script>
+  /* Example: Animate the progress bar to 50% after page load */
+  document.addEventListener('DOMContentLoaded', () => {
+    const barFill = document.getElementById('progressBarFill');
+    if (barFill) {
+      setTimeout(() => {
+        barFill.style.width = '50%';
+      }, 500); // half second delay
+    }
+  });
+</script>
 </body>
 </html>
