--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,8 @@
       <li><a href="progress.html" class="nav-link">Progress</a></li>
       <li><a href="resources.html" class="nav-link">Resources</a></li>
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
@@ -28,30 +30,30 @@
     real-time embedded topics with modern C++ for a professional, interview-focused skill set.
   </p>
 
+  <!-- 3 highlight cards -->
   <div class="cards-row fade-in">
     <div class="card" style="width:280px;">
       <h2>Background</h2>
-      <!-- Icons or images instead of bullet points -->
-      <div style="display:flex; flex-direction:column; gap:8px;">
-        <div><img src="assets/icons/graduate-cap.svg" alt="Grad" style="width:20px; vertical-align:middle;"> B.Sc. in Computer Science / Electronics</div>
-        <div><img src="assets/icons/code.svg" alt="Code" style="width:20px; vertical-align:middle;"> 10+ years in embedded dev</div>
-        <div><img src="assets/icons/chip.svg" alt="Chip" style="width:20px; vertical-align:middle;"> Expert in real-time OS internals</div>
+      <div class="ticket-text">
+        <p>B.Sc. in Computer Science / Electronics Eng.</p>
+        <p>10+ years in embedded dev</p>
+        <p>Expert in real-time systems & OS internals</p>
       </div>
     </div>
     <div class="card" style="width:280px;">
       <h2>Focus Areas</h2>
-      <div style="display:flex; flex-direction:column; gap:8px;">
-        <div><img src="assets/icons/cpp.svg" alt="C++" style="width:20px;"> Low-level C/C++ programming</div>
-        <div><img src="assets/icons/multithread.svg" alt="Threads" style="width:20px;"> Multithreading & concurrency</div>
-        <div><img src="assets/icons/speedometer.svg" alt="Perf" style="width:20px;"> Performance & memory optimization</div>
+      <div class="ticket-text">
+        <p>Low-level C/C++ programming</p>
+        <p>Multithreading & concurrency</p>
+        <p>Performance & memory optimization</p>
       </div>
     </div>
     <div class="card" style="width:280px;">
       <h2>Project Goals</h2>
-      <div style="display:flex; flex-direction:column; gap:8px;">
-        <div><img src="assets/icons/tasks.svg" alt="Modules" style="width:20px;"> Advanced modules for tough C++ interviews</div>
-        <div><img src="assets/icons/browser.svg" alt="Browser" style="width:20px;"> In-browser IDE with real-time checks</div>
-        <div><img src="assets/icons/portfolio.svg" alt="Portfolio" style="width:20px;"> Showcase a pro portfolio & background</div>
+      <div class="ticket-text">
+        <p>Advanced modules for challenging C++ interviews</p>
+        <p>In-browser IDE with real-time checks</p>
+        <p>Showcase a professional portfolio & background</p>
       </div>
     </div>
   </div>
