--- a/quiz.html
+++ b/quiz.html
@@ -5,33 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ohad’s WeCode | Quiz</title>
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body class="page-quiz fade-in">
 <header>
   <div class="nav-container">
-    <div class="brand-area">
-      <span class="brand-title">Ohad’s WeCode</span>
-    </div>
-    
-    <div class="menu-toggle" id="menuToggle">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-    <ul class="nav-menu" id="navMenu">
+    <div class="brand-area">Ohad’s WeCode</div>
+    <ul class="nav-menu">
       <li><a href="index.html" class="nav-link">Home</a></li>
       <li><a href="exercises.html" class="nav-link">Exercises</a></li>
       <li><a href="progress.html" class="nav-link">Progress</a></li>
       <li><a href="resources.html" class="nav-link">Resources</a></li>
       <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
 
 <main class="page-content">
-  <section class="glass" style="max-width:800px; margin:0 auto;">
-    <h1 class="fancy-title">Interview Quiz</h1>
+  <section class="card" style="max-width:800px; margin:0 auto;">
+    <h1>Interview Quiz</h1>
     <p id="quiz-intro">
       Test your C++ knowledge with a lesson-based quiz, featuring a timer and local
       leaderboard!
@@ -51,9 +44,9 @@
   </section>
 </main>
 
-<footer></footer>
-<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
-
+<footer>
+  © 2025 Ohad’s WeCode. All rights reserved.
+</footer>
 <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 <script src="scripts/quiz.js"></script>
