--- a/resources.html
+++ b/resources.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="page-resources fade-in">
-
 <header>
   <div class="nav-container">
     <div class="brand-area">Ohad’s WeCode</div>
@@ -17,6 +16,8 @@
       <li><a href="progress.html" class="nav-link">Progress</a></li>
       <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
@@ -24,8 +25,7 @@
 <main class="page-content">
   <h1>Learning Resources</h1>
   <p class="subtitle">
-    Explore curated references, tutorials, and external links to deepen
-    your understanding of modern C++ and related fields.
+    Explore references, tutorials, external links for deeper C++ mastery.
   </p>
 
   <div class="resources-grid fade-in">
@@ -41,7 +41,7 @@
     </div>
     <div class="resource-card card">
       <h2>Learn C++</h2>
-      <p>Advanced tutorials, best practices, and in-depth articles on modern C++.</p>
+      <p>Advanced tutorials, best practices, in-depth C++ articles.</p>
       <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
@@ -51,12 +51,12 @@
     </div>
     <div class="resource-card card">
       <h2>Embedded Artistry</h2>
-      <p>Articles, tips, and best practices for embedded C++ development.</p>
+      <p>Articles, tips, best practices for embedded C++ development.</p>
       <a href="https://embeddedartistry.com/" target="_blank" class="btn">Visit</a>
     </div>
     <div class="resource-card card">
       <h2>C++ Weekly</h2>
-      <p>Jason Turner's popular YouTube channel for modern C++ techniques.</p>
+      <p>Popular YouTube channel by Jason Turner for modern C++ insights.</p>
       <a href="https://www.youtube.com/c/lefticus1" target="_blank" class="btn">Visit</a>
     </div>
   </div>
