--- a/module3.html
+++ b/module3.html
@@ -25,34 +25,27 @@
       <li><a href="resources.html" class="nav-link">Resources</a></li>
       <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
 
 <main class="page-content">
-  <!-- Breadcrumb -->
-  <div class="breadcrumb">
-    <a href="index.html">Home</a> <span>&gt;</span>
-    <a href="exercises.html">Exercises</a> <span>&gt;</span>
-    <span>Module 3</span>
-  </div>
-
-  <!-- Glass Morphism / Tilt -->
-  <section class="glass module-lessons">
-    <h1 class="fancy-title">Module 3: Real-Time &amp; Embedded Systems</h1>
+  <section class="card fade-in">
+    <h1>Module 3: Real-Time &amp; Embedded Systems</h1>
     <p>Focus on RTOS fundamentals, concurrency in embedded, interrupts, and hardware debugging.</p>
-
     <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
-    <div class="module-timeline" id="moduleTimeline">
+    <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
       <div class="timeline-step">Step 1: Intro to RTOS</div>
       <div class="timeline-step">Step 2: Interrupts &amp; Concurrency</div>
     </div>
-    <hr>
+    <hr style="margin:20px 0;"/>
 
     <h2>Lesson 1: RTOS Basics</h2>
     <p>Understand how tasks are scheduled in real-time operating systems, managing priorities deterministically.</p>
     <button class="btn" onclick="openExternalIDE('M3L1')">Open IDE for Lesson 1</button>
-    <hr>
+    <hr style="margin:20px 0;"/>
 
     <h2>Lesson 2: Interrupts &amp; Embedded Concurrency</h2>
     <p>Design basic interrupt handlers, handle concurrency on microcontrollers, and avoid pitfalls.</p>
@@ -60,10 +53,11 @@
   </section>
 </main>
 
-<footer></footer>
-<p style="text-align:center;">© 2025 Ohad’s WeCode. All rights reserved.</p>
-<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+<footer>
+  © 2025 Ohad’s WeCode. All rights reserved.
+</footer>
 
+<button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
 <script src="scripts/main.js"></script>
 <script>
 function toggleTimeline(){
