--- a/module6.html
+++ b/module6.html
@@ -25,17 +25,13 @@
       <li><a href="resources.html" class="nav-link">Resources</a></li>
       <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
       <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+      <li><a href="diagrams.html" class="nav-link">Diagrams</a></li>
+      <li><a href="interview-simulator.html" class="nav-link">Simulator</a></li>
     </ul>
   </div>
 </header>
 
 <main class="page-content">
-  <div class="breadcrumb" style="margin-bottom:20px; text-align:left;">
-    <a href="index.html" style="color: var(--accent-color);">Home</a> &gt;
-    <a href="exercises.html" style="color: var(--accent-color);">Exercises</a> &gt;
-    <span>Module 6</span>
-  </div>
-
   <section class="card fade-in">
     <h1>Module 6: Templates &amp; Metaprogramming</h1>
     <p>Advanced template programming, SFINAE, type traits, and compile-time computations in C++.</p>
